<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_TemperatureMonitorSetpoints" Id="{119bb2dc-5a3b-4bea-a94c-d79e38f52567}">
    <Declaration><![CDATA[// Setpoints for the temperature monitors
TYPE ST_TemperatureMonitorSetpoints :
STRUCT
	{attribute 'pytmc' := '
		pv: MAX_TEMP
		io: io
		field: EGU C
	'}
	fMaxTemperature : LREAL; // Maximum temperature in Celsius allowed before triggering error
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>